--- a/blog/src/data/pages/business.mdx
+++ b/blog/src/data/pages/business.mdx
@@ -6,7 +6,7 @@ publish: true
 import ContactLink from "components/contact-link"
 
 **Time to market** and superb **execution** are key for a tech startup to succed on a competitive world.  
-An organization's ability to learn from mistakes and pivot quickly enough, can be enabled by their people if they share the right mindset, understand the business, and collaborate together thowards global goals.  
+An organization's ability to learn from mistakes and pivot quickly enough, can be enabled by their development and operations teams if they share the right mindset, understand the business, and collaborate together thowards global goals.  
 
 <br/>
 
@@ -14,22 +14,15 @@ As a human oriented full stack developer, inspired by devops principles, I work 
 
 <br/>
 
-I have been fortunate enough, to work with excellent mentors and friends, who helped me realize that whatever solution I build, it should help my co-workers to excel at what they do best. That attitude drives more value to an organization, than thriving to be a rockstar coder, who writes code that no one understands except by its own author.  
+I live in Montevideo, the capital city of Uruguay. At **EST+1**, I am in a **strategic timezone** that allows me to work remotely with US teams during normal working hours.
 
 <br/>
 
-I live in Montevideo, the capital city of Uruguay; A beautiful country in South America that nicely fits into **UTC-3 / EST+1**.  
-I live in a **strategic timezone**, which allows me to work remotely with US teams during normal working hours.  
-I've a prooven track of +6 years of experience as a remote developer working for distributed global companies, and +13 years of profesional experience.
-If you need help setting up a distributed team, I can help you with that too.  
-
-<br/>
-
-I've a significant academic background in computer science and psychology. But most of what I learned about software engineering comes from being an avid self learner.
+I have an academic background in computer science and psychology, +13 years of working experience as a software developer, and +6 years working remotely, as part of globally distributed teams.
 
 ### Let's talk
 
-If you are looking for a proficient **full-stack developer**, knowleadgable on **devops** techniques, and a **team player** who cares about people and technical culture, please drop me a line. I would love to know about your project.  
+If you are looking for a proficient **full-stack developer**, knowleadgable on **devops** techniques, and a **team player** who cares about people and technical culture, write me an email. I would love to know about your project.  
 <br/>
 <br/>
 <ContactLink />
